<resources>
    <string name="app_name">AndroidMaisonDaurore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="list_children">Listes Enfants</string>
    <string name="list_collaborator">Listes Collaborateurs</string>
    <string name="hello">Hello world!</string>
    <string name="historique">Historique</string>
    <string name="Presence">Presence Eleves</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
