<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/nav_presence"
        android:icon="@drawable/collaborator"
        android:title="@string/Presence" />


    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/logout"
        android:title="@string/logout" />

    <item
        android:id="@+id/nav_send"
        android:icon="@drawable/children"
        android:title="@string/list_children" />

    <item
        android:id="@+id/nav_collaborator"
        android:icon="@drawable/collaborator"
        android:title="@string/list_collaborator" />


    <item
        android:id="@+id/nav_hitorique"
        android:icon="@drawable/historique"
        android:title="@string/historique" />

</menu>